--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@ know about riding a bike?
 </div>
 
 
-<h3>i am rimon</h3>
+
 
 </section>
 </main>
@@ -387,8 +387,75 @@ know about riding a bike?
 <footer>
 
 
+  <footer class=" p-20 bg-neutral text-neutral-content">
+    <div>
+
+    
+    </div> 
+    <div>
+    <div class="flex justify-between">
+    <div class=" justify-between pb-4">
+
+  <div class="flex gap-8">
+   
+    <p>
+      Download Now
+    </p>
+
+   <p>License</p>
 
 
-</footer>
+
+</div>
+
+<div>
+  <ul class="flex gap-8  mt-4">
+
+   <li class="">About</li>
+   <li>Features</li>
+   <li>Pricing</li>
+   <li>Careers</li>
+   <li>Help</li>
+   <li>Privacy Policy</li>
+   </ul></div>
+   <p class="mt-3 text-sm">© 2020 bike. All rights reserved</p>
+</div>
+
+
+<div>
+
+
+<div class="grid gap-4 space-x-3">
+  <p>Get The App</p>
+
+
+  <div><img src="ios.png" alt="" class="w-36"></div>
+  <div><img src="android.png" alt="" class="w-36"> </div>
+</div>
+</div>
+</div>
+
+</div>
+
+
+
+
+  </div>
+
+
+
+
+
+
+
+
+
+    
+
+
+
+  </footer>
+
+
 </body>
 </html>
